# bestway

./: 99-usb-serial-fixed.rules  USB设备固定名称说明.md  frames_2025-06-27_13.56.03.gv  readme.md  trajectory.csv
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/auto_drive/lib/auto_drive/: auto_drive_node  laser_map_builder_node  navigation_controller  navigation_node  odom_to_baselink_publisher  pointcloud_printer_node  pointcloud_to_2d_map  pose_printer_node  search_fire  search_fire_node  simple_map_converter
install/auto_drive/share/auto_drive/: package.sh  package.xml
install/imu_odometry/lib/imu_odometry/: imu_odometry_node
install/imu_odometry/share/imu_odometry/: package.dsv  package.ps1  package.sh
install/lidar_distance/lib/lidar_distance/: lidar_distance
install/lidar_distance/share/lidar_distance/: package.sh  package.xml
install/move_pos/lib/move_pos/: move_pos_action_server  move_pos_topic_node  move_pos_topic_node_v2  (+1 more)
launch/: all_nodes.launch.py  full_navigation.launch.py
log/: latest_build
scripts/: start_all_nodes.sh  start_livox.sh  wait_for_node_then_run_temperature.sh
src/: Orin_NX_CAN_Connection_Guide.md  can_hardware_detector.py  control.py  csb copy.py  csb dt.py  csb.py  serial_data_reader.py  serial_reader_rader.py  servo_pwm.py  simple_can_reader.py  tese_serial.py  test.py  test_can.py  test_gpio.py  ws2812_blink_spi.py
src/auto_drive/: package.xml  setup.py
src/auto_drive/auto_drive/: auto_drive_node.py  navigation_node.py  pointcloud_to_2d_map.py  search_fire.py
src/auto_drive/config/: nav2_params.yaml
src/imu_odometry/: package.xml  setup.cfg  setup.py
src/imu_odometry/imu_odometry/: imu_odometry_node.py
src/lidar_distance/: setup.py
src/lidar_distance/lidar_distance/: lidar_distance.py  lidar_test.ipynb
src/move_pos/: CMakeList.txt  package.xml  setup.cfg  setup.py
src/move_pos/action/: GoToPose.action
src/move_pos/move_pos/: move_pos.py  move_pos_v2.py  move_pos_v3.py
src/move_pos_interfaces/: CMakeLists.txt  package.xml
src/move_pos_interfaces/action/: GoToPose.action
src/nav2_launch/: package.xml  setup.py
src/pcd_test/: test_pcd.py
src/sbus_control/: package.xml  setup.cfg  setup.py
src/sbus_control/sbus_control/: keyboard_control_node.py  sbus_control_node.py  serial_node.py
src/show_pointcloud/: README.md  install_deps.sh  package.xml  restart.sh  setup.cfg  setup.py
src/show_pointcloud/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/show_pointcloud/launch/: start_visualization.launch.py
src/show_pointcloud/show_pointcloud/: pointcloud_server.py
src/show_pointcloud/web/: debug.html  ultimate_test.html
src/temperature_publisher/: CMakeLists.txt
src/temperature_publisher/env-hooks/: temperature_publisher_library_path.dsv.in
src/temperature_publisher/include/: SVNETSDK.h
src/temperature_publisher/src/: temperature_publisher.cpp  test_demo_thml.cpp
src/yuntai_control/: package.xml  setup.cfg  setup.py
src/yuntai_control/yuntai_control/: temperature_tracking_node.py  temperature_tracking_node_v2.py  yuntai_control_node.py  yuntai_hardware_pwm_node.py  yuntai_search_node.py
src/yuntai_test/: yuntai.ipynb  yuntai.py
src/zed_test/: zed_test.ipynb
systemd/: bestway_all_nodes.service  livox_ros_driver2.service  temperature_publisher.service
(+88 files in other folders)
