<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nav2_launch</name>
  <version>0.0.0</version>
  <description>Nav2导航自定义启动包，包含自定义launch文件，便于一键启动导航系统。</description>
  <maintainer email="19858193124@163.com">bestway</maintainer>
  <license>Apache License 2.0</license>

  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_python</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
